feat: identificador obligatorio, nombre opcional en modelo Animal
